[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/Hooks/MultipleHooks.gd" type="Script" id=1]
[ext_resource path="res://Player/Hooks/BasicWeapon.tscn" type="PackedScene" id=2]

[node name="MultipleHooks" type="Node2D"]
script = ExtResource( 1 )

[node name="BasicWeapon1" parent="." instance=ExtResource( 2 )]
rotation = -0.0872665

[node name="EdgeRay1" parent="BasicWeapon1/GrappleCast" index="0"]
visible = false
enabled = false

[node name="EdgeRay2" parent="BasicWeapon1/GrappleCast" index="1"]
visible = false
enabled = false

[node name="BasicWeapon2" parent="." instance=ExtResource( 2 )]
rotation = 0.0872665

[node name="EdgeRay1" parent="BasicWeapon2/GrappleCast" index="0"]
visible = false
enabled = false

[node name="EdgeRay2" parent="BasicWeapon2/GrappleCast" index="1"]
visible = false
enabled = false


[editable path="BasicWeapon1"]

[editable path="BasicWeapon2"]
